# server-driven-mui

./: README.md  jest.config.js  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml
docs/: roadmap.md
docs/prototypes/: 01-single-entity-form.md  02-table.md
sdmui-python/: app.py  pyproject.toml
sdmui-python/sdmui_python/: decorators.py
src/api/: FormView.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/[backend_protocol]/[backend_url]/[...backend_route]/: page.tsx  sdui_render.tsx
src/app/app-ui/[url_scheme]/[hostname]/[...path]/: page.tsx
src/components/: FormShell.tsx  MediaCard.tsx  NiceTable.tsx  Snackbar.tsx
src/context/: SnackbarContext.tsx
src/theme/: simple.tsx
tests/e2e/: homepage.spec.ts
tests/e2e/prototypes/: 01-single-entity-form.spec.ts
tests/servers/address-book/: README.md  server.ts
tests/unit/: FormView.json-schema.test.ts  MediaCard.test.tsx
tests/unit/components/: FormShell.test.tsx  Snackbar.test.tsx  SnackbarProvider.test.tsx
