[tool.poetry]
name = "sdmui-python"
version = "0.1.0"
description = ""
authors = ["Aditya Dhara <adhara@wayfair.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
